--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -137,11 +137,8 @@ p\pn{f(\xbf) = \ybf \mvert \xbf} = \int p\pn{f(\xbf) = \ybf \mvert f, \xbf}\, p(
 \end{equation*}
 where here $p(f|\xbf) = p(f) \sim \mathcal{GP}(m,k)$ since we assume no dependence of $f$ on $\xbf$.
 We can sample a vector of unseen data $\ybf^* = f(\xbf^*)$ from the predictive posterior with
-\begin{equation*}
-\label{eq:gpsampler}
-\ybf^* \sim \mathcal{N}(\bm{\mu},\bm{\Sigma}),
-\end{equation*}
-with $\bm{\mu} = k(\xbf,\xbf^*)\, k(\xbf^*,\xbf^*)^{-1}\, \ybf$ and $\bm{\Sigma} =  k(\xbf,\xbf) - k(\xbf,\xbf^*)k(\xbf^*,\xbf^*)^{-1} k(\xbf^*,\xbf)$'
+$\ybf^* \sim \mathcal{N}(\bm{\mu},\bm{\Sigma})$
+with $\bm{\mu} = k(\xbf,\xbf^*)\, k(\xbf^*,\xbf^*)^{-1}\, \ybf$ and $\bm{\Sigma} =  k(\xbf,\xbf) - k(\xbf,\xbf^*)k(\xbf^*,\xbf^*)^{-1} k(\xbf^*,\xbf)$.
 
 \subsection*{Memoization}
 Memoization is the practice of storing previously computed values of a function so that future calls
@@ -167,28 +164,55 @@ We show how we can use  {\tt gpmem} to reproduce Neal's Hierarchical Bayesian GP
 \begin{minipage}{\linewidth}
 \footnotesize
 \belowcaptionskip=-10pt
-\begin{lstlisting}[frame=single,caption=Hierarchical  GP Smoothing,mathescape,label=alg:gphierarch,escapechar=']
-[ASSUME alpha (mem (lambda (i)  (gamma  1 3 )))] $\in$ {hyper-parameters-$\Gamma$} 
-[ASSUME beta  (mem (lambda (i)  (gamma  1 3 )))] $\in$ {hyper-parameters-$\Gamma$} 
-[ASSUME l  (gamma (alpha 1) (beta 1))]   $\in$ {hyper-parameters} 
-[ASSUME sf (gamma (alpha 2) (beta 2))]   $\in$ {hyper-parameters}
-[ASSUME sigma (uniform 0 5 )]            $\in$ {hyper-parameters} % Fig. '\ref{fig:inference}'
-% above: structured prior, Fig. '\ref{fig:NealpriorStruct}'
-$\smash{k_{SE}(x,x^\prime) := \theta^2 \exp(-\frac{(x-x^\prime)^2}{2\ell^2})}$
-$\smash{k_{WN}(x,x^\prime) := \sigma^2 \delta_{x,x^\prime}}$
-[ASSUME k$_{SE}$ VentureFunction($k_{SE},\theta,\ell$) ]
-[ASSUME k$_{WN}$ VentureFunction($k_{WN},\sigma$) ]
-[ASSUME SE make-se (apply-function k$_{SE}$ l sf) ]
-[ASSUME WN make-se (apply-function k$_{WN}$ sigma) ]
-[ASSUME (list f_compute f_emu) (gpmem f_restr (function-plus SE WN) )]
-[SAMPLE (f_emu (array 1 2 3))]  % prior, Fig. '\ref{fig:NealBO}'
-for i=1 to n:
-  [PREDICT (f_compute x[i])] % observing with a look-up function
-[SAMPLE (f_emu (array 1 2 3))]  % after observation, Fig. '\ref{fig:NealAO}'
-[INFER (REPEAT 100 
-	(DO (MH {hyper-parameters} one 2)
-	    (MH {hyper-parameters-$\Gamma$} one 2) ))]
-[SAMPLE (f_emu (array 1 2 3))]  % posterior , Fig. '\ref{fig:NealAI}'
+\begin{lstlisting}[frame=single,caption=Hierarchical  GP Smoothing,mathescape,label=alg:gphierarch]
+[INFER (load-plugin (quote symbol<"gppaper-plugin.py">) 'neal)]
+
+;;; SETTING UP THE MODEL
+[ASSUME alpha-sf (tag 'hyperhyper 0 (gamma 7 1))]
+[ASSUME beta-sf (tag 'hyperhyper 2 (gamma 1 0.5))]
+[ASSUME alpha-l (tag 'hyperhyper 1 (gamma 7 1))]
+[ASSUME beta-l (tag 'hyperhyper 3 (gamma 1 0.5))]
+[ASSUME alpha-s (tag 'hyperhyper 4 (gamma 7 1))]
+[ASSUME beta-s (tag 'hyperhyper 5 (gamma 1 0.5))]
+;; Parameters of the covariance function
+[ASSUME sf (tag 'hyper 0 (log (gamma alpha-sf beta-sf )))]
+[ASSUME l (tag 'hyper 1 (log (gamma alpha-l beta-l )))]
+[ASSUME sigma (tag 'hyper 2 (uniform-continuous 0 2 ))]
+;;  The covariance function
+[ASSUME se (make-se sf l)]
+[ASSUME wn (make-whitenoise sigma)]
+[ASSUME composite-covariance (add-funcs se wn)]
+
+
+;; Create a prober and emulator using gpmem
+[ASSUME f-restr (get-neal-prober)]
+[ASSUME compute-and-emu (gpmem f-restr composite-covariance)]
+
+;; Plot data collection
+[INFER (do
+    (stats <- (extract-stats (second compute-and-emu)))
+    (call-back collect-neal-plot-data 'before-probes sf l sigma ',stats))]
+
+;; Probe all data points
+[PREDICT (mapv (first compute-and-emu) (get-neal-data-xs))]
+
+;; Plot data collection
+[INFER (do
+    (stats <- (extract-stats (second compute-and-emu)))
+    (call-back collect-neal-plot-data 'after-probes sf l sigma ',stats))]
+
+;; Infer hypers and hyperhypers
+[INFER (repeat 100 (do
+    (mh 'hyperhyper one 2)
+    (mh 'hyper one 1)))]
+
+;; Plot data collection
+[INFER (do
+    (stats <- (extract-stats (second compute-and-emu)))
+    (call-back collect-neal-plot-data 'after-hyperinf sf l sigma ',stats))]
+
+[INFER (call-back dump-neal-plot-data)]
+
 \end{lstlisting}
 \end{minipage}
 
@@ -197,9 +221,9 @@ Observed data is generated with the following model:
 f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;\;\eta \sim \mathcal{N}(0,\sigma)
 \end{equation*} where $\sigma$ is $0.1$ with probability $0.95$, $1$ otherwise.
 \begin{center}
-\includegraphics[width=7cm]{neal_se_1final.png}
-\includegraphics[width=7cm]{neal_se_2final.png}
-\includegraphics[width=7cm]{neal_se_3final.png}
+\includegraphics[width=6cm]{neal_se_1final.png}
+\includegraphics[width=6cm]{neal_se_2final.png}
+\includegraphics[width=6cm]{neal_se_3final.png}
 \end{center}
 
 
@@ -207,10 +231,10 @@ f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;
 
 
 %\begin{wraptable}{r}{15cm} 
-\begin{wraptable}{r}{10cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
+\begin{wraptable}{r}{7cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
 \begin{center}
 %\includegraphics[width=10cm]{neal_contour_l_vs_sf_s__marginal_before.png}
-\includegraphics[width=10cm]{neal_contour_l_vs_sf_s__marginal_after.png} 
+\includegraphics[width=7cm]{neal_contour_l_vs_sf_s__marginal_after.png} 
 \end{center}
 \end{wraptable}
  Above, we (left to right) we see predictions before data has been observed, after data has been observed, after we inferred over these observations. On the right, we see a contour plot and marginals of the the $\ell$ and $\theta$ hyper-parameters of the above program after inference (right).
@@ -230,7 +254,7 @@ f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;
  \item adequate symbolic expressions
  \end{itemize}
  \subsection*{Results}
- 500 and 100 samples drawn from the posterior on structure for two problems used in the Automated Statistician Project~\cite{duvenaud2013structure}:
+ 500 and 100 samples drawn from the posterior on structure for two problems used in the Automated Statistician Project~\cite{duvenaud2013structure}, the airline dataset (above) and the CO2 dataset (below):
  \begin{center}\vspace{1cm}
 \includegraphics[width=0.7\linewidth]{structureCo2b.png}
 %\captionof{figure}{\color{DarkSlateGray} Composition of covariance function parsed using the example SE $\times$ LIN $+$ PER $\times$ LIN $+$  RQ $\times$ LIN}
@@ -239,32 +263,8 @@ f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;
  \begin{minipage}{\linewidth}
 \small
 \begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian GP Structure Learning,mathescape]
-[ASSUME base_kernels (list K$_1$,K$_2$,$\cdots$,K$_n$)] % defined as above
-[ASSUME p$_n$ (uniform_structure n)]        % prior on the number of kernels
-[ASSUME S$_{\emph{K}}$ (subset  base_kernels p$_n$)]    % sampling a subset of size n
-[ASSUME composition (lambda (l)          % kernel composition
-                     (if (lte ( size l) 1)
-                         (first l)
-                          (if (flip)
-                              (func_plus (first l) (cov_compo (rest l)))
-                              (func_times (first l) (cov_compo (rest l)))
-                          )
-                     )
-              )
 
-[ASSUME K (composition  S$_{\emph{K}}$)]
-
-[ASSUME (list f_compute f_emu) (gpmem f_restr K )]
-
-for i=1 to n:
-  [PREDICT (f_compute x[i])] % observing with a look-up function
-
-[INFER  (REPEAT 2000 (DO 
-                        (MH p$_n$ one 1) 
-                        (MH S$_{\emph{K}}$ one 1) 
-                        (MH K$^*$ one 1) 
-                        (MH {hyper-parameters} one 10)) ]
-
+Place Holder
 
 \end{lstlisting}
 
@@ -284,9 +284,7 @@ for i=1 to n:
 %	Bayesian Optimization
 %----------------------------------------------------------------------------------------
 \section*{Bayesian Optimization}
-\begin{wraptable}{r}{20cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
-\includegraphics[width=20cm]{BayesOpt_gpmem_sequence.png}
-\end{wraptable}
+
 %Bayesian Optimization with Thompson sampling providing:
 %\begin{itemize}
 % \item  the ability to search over a broader space of contexts than the parametric families that are typically used;
@@ -303,8 +301,61 @@ Repeat:
     Let $r_\true$ be the reward received for action $a$.
     Update the believed distribution on $\theta$, i.e., $P(\theta) \gets P_\rmnew(\theta)$ where $P_\rmnew(\theta) = P\pn{\theta \mvert a \mapsto r_\true}$.
 \end{enumerate}
+ \begin{minipage}{\linewidth}
+\small
+\begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian Optimization,mathescape]
+
+[INFER (load-plugin (quote symbol<"gppaper-plugin.py">) 'bayesopt)]
+
+[ASSUME sf1 (tag 'hyper 0 (log (uniform-continuous 0 10)))]
+[ASSUME l1 (tag 'hyper 1 (log (uniform-continuous 0 10)))]
+[ASSUME se (make-se sf1 l1)]
+[ASSUME blackbox-f (get-bayesopt-blackbox)]
+[ASSUME compute-and-emu (gpmem blackbox-f se)]
+
+[DEFINE get-uniform-candidate (lambda (prev-xs) (uniform-continuous -20 20))]
+[DEFINE mc-argmax
+        (lambda (emulator prev-xs)
+             ((lambda (candidate-xs)
+                (lookup candidate-xs
+                        (argmax-of-array (mapv emulator candidate-xs))))
+              (mapv (lambda (i) (get-uniform-candidate prev-xs))
+                   (linspace 0 19 20))))]
+[DEFINE emulator-point-sample
+        (lambda (x)
+          (run (sample
+            (lookup ((second compute-and-emu) (array ,x))
+                    0))))]
+
+[INFER
+    (repeat 15 (do pass
+
+      ;; Call f-compute on the next point
+      (predict ((first compute-and-emu)
+                ,(mc-argmax emulator-point-sample '-)))
+
+      ;; Stats collection
+      (stats-before <- (extract-stats (second compute-and-emu)))
+      (call-back collect-bayesopt-plot-data sf1 l1 ',stats-before)
+
+      ;; Hyperparameter inference
+      (mh 'hyper one 50)
+
+      ;; More stats collection
+      (stats-after <- (extract-stats (second compute-and-emu)))
+      (call-back collect-bayesopt-plot-data sf1 l1 ',stats-after)))]
+
+[INFER (call-back dump-bayesopt-plot-data)]
+
+
+\end{lstlisting}
+\end{minipage}
 
 \subsection*{Bayesian Optimization with {\tt gpmem}}
+\begin{wraptable}{r}{20cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
+\includegraphics[width=20cm]{BayesOpt_gpmem_sequence.png}
+\end{wraptable}
+
 \begin{itemize}
 \item contexts $\theta = (\mu, K)$ are Gaussian processes over the action space $\Acal = \R$.
   \item $K_\prior = K_{\prior,\sigma,\ell}$ is a procedure, with parameters $\sigma,\ell$, to be used as the prior covariance function: $K_\prior(a,a') = \sigma^2 \exp\pn{-\frac{(a-a')^2}{2\ell^2}}$
@@ -313,7 +364,7 @@ Repeat:
   \item $\rbf_\past = \pn{r_i}_{i=1}^{n}$ are the corresponding rewards
 \end{itemize}
 
-\subsection*{Above: Dynamics of Thompson sampling}
+\subsection*{Right: Dynamics of Thompson sampling}
 \begin{itemize}
  \item the blue curve is the true function $V$;
  \item the red region is a blending of 100 samples of the curve generated (jointly) by a GP-based emulator $V_\emu$;
@@ -339,7 +390,7 @@ Repeat:
 
 
 \section*{Conclusions}
-{\tt gpmem} is a generalization of a number of GP related models and can be applied to:
+{\tt gpmem} is a generalization of a number of GP\newline related models and can be applied to:
 \begin{itemize}
 \setlength{\itemindent}{1cm}
 \item Hierarchical Bayesian GP
