--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -39,8 +39,17 @@
 \usepackage{bm}
 \usepackage{amsmath,amssymb}
 \usepackage{listings}
+  \definecolor{mygreen}{rgb}{0,0.4,0}
+  \lstset{
+    basicstyle=\small\ttfamily,
+    language=Lisp,
+    keywordstyle=,
+    commentstyle=\color{mygreen}
+  }
+\usepackage{inconsolata}
 
 \newcommand{\gpmem}{\texttt{gpmem}}
+\newcommand{\compute}{{\textrm{compute}}}
 \newcommand{\emu}{{\textrm{emu}}}
 \newcommand{\restr}{{\textrm{restr}}}
 \newcommand{\true}{{\textrm{true}}}
@@ -126,29 +135,30 @@
 %----------------------------------------------------------------------------------------
 %	GP Memoization
 %----------------------------------------------------------------------------------------
-\section*{GP Memoization: {\tt gpmem}}
+\section*{GP Memoization: \texttt{gpmem}}
 \subsection*{Gaussian Processes}
-For any finite set of inputs $\xbf$, the marginal prior on $f(\xbf)$ is the multivariate Gaussian $f(\xbf) \sim \mathcal{GP}(0, k(\xbf,\xbf))$,
+Let $f \sim \mathcal{GP}(0,k)$ be a Gaussian process: that is, for any finite set of inputs $\xbf$, the marginal prior on $f(\xbf)$ is the multivariate Gaussian $f(\xbf) \sim \mathcal{N}(0, k(\xbf,\xbf))$,
 where $k(\xbf,\xbf') = \Cov_f\pn{f(\xbf), f(\xbf')}$ is the covariance function, a.k.a.\ kernel.
 The marginal likelihood can be expressed as:
 \begin{equation*}
 \label{eq:marg}
 p\pn{f(\xbf) = \ybf \mvert \xbf} = \int p\pn{f(\xbf) = \ybf \mvert f, \xbf}\, p(f|\xbf) \, df
 \end{equation*}
-where here $p(f|\xbf) = p(f) \sim \mathcal{GP}(m,k)$ since we assume no dependence of $f$ on $\xbf$.
+where here $p(f|\xbf) = p(f) \sim \mathcal{GP}(0,k)$ since we assume no dependence of $f$ on $\xbf$.
 We can sample a vector of unseen data $\ybf^* = f(\xbf^*)$ from the predictive posterior with
 $\ybf^* \sim \mathcal{N}(\bm{\mu},\bm{\Sigma})$
 with $\bm{\mu} = k(\xbf,\xbf^*)\, k(\xbf^*,\xbf^*)^{-1}\, \ybf$ and $\bm{\Sigma} =  k(\xbf,\xbf) - k(\xbf,\xbf^*)k(\xbf^*,\xbf^*)^{-1} k(\xbf^*,\xbf)$.
 
-\subsection*{Memoization}
-Memoization is the practice of storing previously computed values of a function so that future calls
-with the same inputs can be evaluated by lookup rather than re-computation. Gaussian Process memoization: 
-
+\subsection*{A Variation on Memoization}
+Traditionally, memoization is the practice of storing previously computed values of a function so that future calls
+with the same inputs can be evaluated by lookup rather than re-computation. {\em GP memoization} produces two components:
+\[ f \to (f_\compute, f_\emu) \]
 \begin{itemize}
 \setlength{\itemindent}{1cm}
- \item is a statistical alternative to standard memoization;
- \item changes semantics of a probabilistic program; and
- \item produces a statistical emulator whose predictions improve with memoization.
+ \item is a generalization of traditional memoization;
+ \item changes semantics of a probabilistic program;
+ \item $f_\emu$ is a statistical emulator with GP prior;
+ \item each time $f_\compute$ is called, an observation is incorporated into $f_\emu$ and predictions improve.
 \end{itemize}
 
 
@@ -162,64 +172,42 @@ with the same inputs can be evaluated by lookup rather than re-computation. Gaus
 
 We show how we can use  {\tt gpmem} to reproduce Neal's Hierarchical Bayesian GP~\cite{neal1997monte} for data with outliers.
 \begin{minipage}{\linewidth}
-\footnotesize
 \belowcaptionskip=-10pt
 \begin{lstlisting}[frame=single,caption=Hierarchical  GP Smoothing,mathescape,label=alg:gphierarch]
-[INFER (load-plugin (quote symbol<"gppaper-plugin.py">) 'neal)]
-
 ;;; SETTING UP THE MODEL
-[ASSUME alpha-sf (tag 'hyperhyper 0 (gamma 7 1))]
-[ASSUME beta-sf (tag 'hyperhyper 2 (gamma 1 0.5))]
-[ASSUME alpha-l (tag 'hyperhyper 1 (gamma 7 1))]
-[ASSUME beta-l (tag 'hyperhyper 3 (gamma 1 0.5))]
-[ASSUME alpha-s (tag 'hyperhyper 4 (gamma 7 1))]
-[ASSUME beta-s (tag 'hyperhyper 5 (gamma 1 0.5))]
+ASSUME alpha-sf (tag 'hyperhyper 0 (gamma 7 1))
+ASSUME {{... several more hyper-hyperparameters ...}}
 ;; Parameters of the covariance function
-[ASSUME sf (tag 'hyper 0 (log (gamma alpha-sf beta-sf )))]
-[ASSUME l (tag 'hyper 1 (log (gamma alpha-l beta-l )))]
-[ASSUME sigma (tag 'hyper 2 (uniform-continuous 0 2 ))]
-;;  The covariance function
-[ASSUME se (make-se sf l)]
-[ASSUME wn (make-whitenoise sigma)]
-[ASSUME composite-covariance (add-funcs se wn)]
+ASSUME sf (tag 'hyper 0 (log (gamma alpha-sf beta-sf)))
+ASSUME l (tag 'hyper 1 (log (gamma alpha-l beta-l)))
+ASSUME sigma (tag 'hyper 2 (uniform-continuous 0 2))
+;; The covariance function
+ASSUME se (make-squaredexp sf l)
+ASSUME wn (make-whitenoise sigma)
+ASSUME composite-covariance (add-funcs se wn)
 
-
+;;; PERFORMING INFERENCE
 ;; Create a prober and emulator using gpmem
-[ASSUME f-restr (get-neal-prober)]
-[ASSUME compute-and-emu (gpmem f-restr composite-covariance)]
-
-;; Plot data collection
-[INFER (do
-    (stats <- (extract-stats (second compute-and-emu)))
-    (call-back collect-neal-plot-data 'before-probes sf l sigma ',stats))]
+ASSUME f-restr (get-neal-prober)
+ASSUME compute-and-emu (gpmem f-restr composite-covariance)
 
 ;; Probe all data points
-[PREDICT (mapv (first compute-and-emu) (get-neal-data-xs))]
-
-;; Plot data collection
-[INFER (do
-    (stats <- (extract-stats (second compute-and-emu)))
-    (call-back collect-neal-plot-data 'after-probes sf l sigma ',stats))]
+PREDICT (mapv (first compute-and-emu) (get-neal-data-xs))
 
 ;; Infer hypers and hyperhypers
-[INFER (repeat 100 (do
+INFER (repeat 100 (do
     (mh 'hyperhyper one 2)
-    (mh 'hyper one 1)))]
-
-;; Plot data collection
-[INFER (do
-    (stats <- (extract-stats (second compute-and-emu)))
-    (call-back collect-neal-plot-data 'after-hyperinf sf l sigma ',stats))]
-
-[INFER (call-back dump-neal-plot-data)]
+    (mh 'hyper one 1)))
 
 \end{lstlisting}
 \end{minipage}
 
+[\textbf{TODO:} ``Here we use a squared-exponential plus white-noise kernel\ldots'' (the parameters $\ell,\theta,\sigma$, or whatever notation you choose to use, should be declared here)]
+
 Observed data is generated with the following model: 
 \begin{equation*}
 f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;\;\eta \sim \mathcal{N}(0,\sigma)
-\end{equation*} where $\sigma$ is $0.1$ with probability $0.95$, $1$ otherwise.
+\end{equation*} where $\sigma = 0.1$ with probability $0.95$, $\sigma = 1$ otherwise.
 \begin{center}
 \includegraphics[width=6cm]{neal_se_1final.png}
 \includegraphics[width=6cm]{neal_se_2final.png}
@@ -237,7 +225,7 @@ f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;
 \includegraphics[width=7cm]{neal_contour_l_vs_sf_s__marginal_after.png} 
 \end{center}
 \end{wraptable}
- Above, we (left to right) we see predictions before data has been observed, after data has been observed, after we inferred over these observations. On the right, we see a contour plot and marginals of the the $\ell$ and $\theta$ hyper-parameters of the above program after inference (right).
+ Above, we see (left to right) predictions before data has been observed, after data has been observed, and after we inferred the hyperparameters. On the right, we see a contour plot and marginals of the the $\ell$ and $\theta$ hyper-parameters of the above program after inference (right).
 
 -------------------------------------------------
 
@@ -290,8 +278,10 @@ Place Holder
 % \item  the ability to search over a broader space of contexts than the parametric families that are typically used;
 % \item parsimony of the resulting probabilistic program.
 %\end{itemize}
-\subsection*{Thompson Sampling}
-In Thompson sampling, the goal is to maximize the total reward received for all actions by placing a prior distribution $P(\theta)$ on the possible ``contexts'' $\theta \in \Theta$ with reward  $r \in \R$.
+\subsection*{Thompson Sampling for Homogeneous Sequential Markov Decision Processes}
+Each action $a \in \mathcal{A}$ receives a (random) reward $r \in \R$ but the distribution $P(r|a)$ is unknown to the agent.  If the agent had full knowledge, the agent would act to maximize $V(a) = \Ebkt{r|a}$.  Here $V$ is the value function.
+
+A ``context'' $\theta \in \Theta$ is a belief about how $P(r|a)$ behaves.  In Thompson sampling, the agent places a prior $P(\theta)$ on the set of possible contexts and tries to improve $\theta$ in a Bayesian fashion.
 
 Repeat:
 \begin{enumerate}
@@ -301,68 +291,21 @@ Repeat:
     Let $r_\true$ be the reward received for action $a$.
     Update the believed distribution on $\theta$, i.e., $P(\theta) \gets P_\rmnew(\theta)$ where $P_\rmnew(\theta) = P\pn{\theta \mvert a \mapsto r_\true}$.
 \end{enumerate}
- \begin{minipage}{\linewidth}
-\small
-\begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian Optimization,mathescape]
 
-[INFER (load-plugin (quote symbol<"gppaper-plugin.py">) 'bayesopt)]
-
-[ASSUME sf1 (tag 'hyper 0 (log (uniform-continuous 0 10)))]
-[ASSUME l1 (tag 'hyper 1 (log (uniform-continuous 0 10)))]
-[ASSUME se (make-se sf1 l1)]
-[ASSUME blackbox-f (get-bayesopt-blackbox)]
-[ASSUME compute-and-emu (gpmem blackbox-f se)]
-
-[DEFINE get-uniform-candidate (lambda (prev-xs) (uniform-continuous -20 20))]
-[DEFINE mc-argmax
-        (lambda (emulator prev-xs)
-             ((lambda (candidate-xs)
-                (lookup candidate-xs
-                        (argmax-of-array (mapv emulator candidate-xs))))
-              (mapv (lambda (i) (get-uniform-candidate prev-xs))
-                   (linspace 0 19 20))))]
-[DEFINE emulator-point-sample
-        (lambda (x)
-          (run (sample
-            (lookup ((second compute-and-emu) (array ,x))
-                    0))))]
-
-[INFER
-    (repeat 15 (do pass
-
-      ;; Call f-compute on the next point
-      (predict ((first compute-and-emu)
-                ,(mc-argmax emulator-point-sample '-)))
-
-      ;; Stats collection
-      (stats-before <- (extract-stats (second compute-and-emu)))
-      (call-back collect-bayesopt-plot-data sf1 l1 ',stats-before)
-
-      ;; Hyperparameter inference
-      (mh 'hyper one 50)
-
-      ;; More stats collection
-      (stats-after <- (extract-stats (second compute-and-emu)))
-      (call-back collect-bayesopt-plot-data sf1 l1 ',stats-after)))]
-
-[INFER (call-back dump-bayesopt-plot-data)]
-
-
-\end{lstlisting}
-\end{minipage}
-
-\subsection*{Bayesian Optimization with {\tt gpmem}}
-\begin{wraptable}{r}{20cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
+\newpage
+\subsection*{Thompson Sampling with {\tt gpmem}}
+\begin{wrapfigure}{r}{20cm}
 \includegraphics[width=20cm]{BayesOpt_gpmem_sequence.png}
-\end{wraptable}
+\end{wrapfigure}
 
+Contexts $\theta = (K_\prior, \sigma, \ell, \abf_\past, \rbf_\past)$ are Gaussian processes over the action space $\Acal = \R$.
 \begin{itemize}
-\item contexts $\theta = (\mu, K)$ are Gaussian processes over the action space $\Acal = \R$.
   \item $K_\prior = K_{\prior,\sigma,\ell}$ is a procedure, with parameters $\sigma,\ell$, to be used as the prior covariance function: $K_\prior(a,a') = \sigma^2 \exp\pn{-\frac{(a-a')^2}{2\ell^2}}$
   \item $\sigma$ and $\ell$ are (hyper)parameters for $K_\prior$
   \item $\abf_\past = \pn{a_i}_{i=1}^{n}$ are the previously probed actions
   \item $\rbf_\past = \pn{r_i}_{i=1}^{n}$ are the corresponding rewards
 \end{itemize}
+Because $\abf_\past$ and $\rbf_\past$ can grow without bound as more actions are probed, the space of possible contexts $\theta \in \Theta$ is infinite-dimensional.  Probabilistic programming allows us to represent elements of this space in a compact, natural way.
 
 \subsection*{Right: Dynamics of Thompson sampling}
 \begin{itemize}
@@ -372,14 +315,44 @@ Repeat:
  \item in the right column, the next chosen probe point is circled in green;
  \item each successive probe point $a$ is the (stochastic) maximum of $V_\emu$, sampled pointwise and conditioned on the values of the previously probed points; and
  \item probes tend to happen at points either where the value of $V_\emu$ is high, or where $V_\emu$ has high uncertainty.
- 
 \end{itemize}
 
+\begin{minipage}{38cm}
+\begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian Optimization,mathescape]
+ASSUME sf1 (tag 'hyper 0 (log (uniform-continuous 0 10)))
+ASSUME l1 (tag 'hyper 1 (log (uniform-continuous 0 10)))
+ASSUME se (make-se sf1 l1)
+ASSUME blackbox-f (get-bayesopt-blackbox)
+ASSUME compute-and-emu (gpmem blackbox-f se)
+
+DEFINE get-uniform-candidate (lambda (prev-xs) (uniform-continuous -20 20))
+DEFINE mc-argmax
+        (lambda (emulator prev-xs)
+             ((lambda (candidate-xs)
+                (lookup candidate-xs
+                        (argmax-of-array (mapv emulator candidate-xs))))
+              (mapv (lambda (i) (get-uniform-candidate prev-xs))
+                   (linspace 0 19 20))))
+DEFINE emulator-point-sample
+        (lambda (x)
+          (run (sample
+            (lookup ((second compute-and-emu) (array ,x))
+                    0))))
+
+INFER
+    (repeat 15 (do pass
+
+      ;; Call f-compute on the next probe point
+      (predict ((first compute-and-emu)
+                ,(mc-argmax emulator-point-sample '-)))
+                
+      ;; Hyperparameter inference
+      (mh 'hyper one 50)
+\end{lstlisting}
+\end{minipage}
       
      
      
-      
-    
 %
 %\begin{center}\vspace{1cm}
 %\captionof{figure}{\color{DarkSlateGray} } \label{fig:bayesopt-sequence}
