--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -202,12 +202,12 @@ Statistical emulation of $f_\restr(x) = \begin{cases}
 \belowcaptionskip=-10pt
 \begin{lstlisting}[frame=single,caption=Hierarchical  GP Smoothing,mathescape,label=alg:gphierarch]
 ;;; SETTING UP THE MODEL
-ASSUME alpha-sf (tag 'hyperhyper 0 (gamma 7 1))
+ASSUME alpha-sf (tag 'hyperhyper (gamma 7 1))
 ASSUME {{... several more hyper-hyperparameters ...}}
 ;; Parameters of the covariance function
-ASSUME sf (tag 'hyper 0 (log (gamma alpha-sf beta-sf)))
-ASSUME l (tag 'hyper 1 (log (gamma alpha-l beta-l)))
-ASSUME sigma (tag 'hyper 2 (uniform-continuous 0 2))
+ASSUME sf (tag 'hyper (log (gamma alpha-sf beta-sf)))
+ASSUME l (tag 'hyper (log (gamma alpha-l beta-l)))
+ASSUME sigma (tag 'hyper (uniform-continuous 0 2))
 ;; The covariance function
 ASSUME se (make-squaredexp sf l)
 ASSUME wn (make-whitenoise sigma)
@@ -269,19 +269,19 @@ $RQ =   \theta \bigg(1 + \frac{(x - x^\prime)^2}{2 \alpha \ell^2} \bigg)^{-\alph
 \end{center}
 \subsection*{Kernel Composition}
 \begin{equation*}
-\mathbf{K}_{new} = \mathbf{K}_1 + \mathbf{K}_2 \;\;\;\;\;\;\text{or}\;\;\;\;\;\; \mathbf{K}_{new} = \mathbf{K}_1 \times \mathbf{K}_2 
+\mathbf{K}_{\textrm{new}} = \mathbf{K}_1 + \mathbf{K}_2 \;\;\;\;\;\;\text{or}\;\;\;\;\;\; \mathbf{K}_{\textrm{new}} = \mathbf{K}_1 \times \mathbf{K}_2 
 \end{equation*}
 \begin{minipage}{\linewidth}
 \small
 \begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian GP Structure Learning,mathescape]
 ;;; GRAMMAR FOR KERNEL STRUCTURE
-[ASSUME base-kernels (list K$_1$,K$_2$,$\cdots$,K$_n$)] ;; defined as above
+ASSUME base-kernels (list K$_1$,K$_2$,$\cdots$,K$_n$) ;; defined as above
 
 ;; prior on the number of kernels
-[ASSUME p-number-k (tag 'number-kernels (uniform-structure n))]
-[ASSUME s (tag 'choice-subset (subset  base-kernels p-number-k))] 
+ASSUME p-number-k (tag 'number-kernels (uniform-structure n))
+ASSUME s (tag 'choice-subset (subset  base-kernels p-number-k)) 
 
-[ASSUME composition (tag 'composit (lambda (l) ;; kernel composition
+ASSUME composition (tag 'composit (lambda (l) ;; kernel composition
                      (if (lte ( size l) 1)
                          (first l)
                           (if (flip)
@@ -289,21 +289,18 @@ $RQ =   \theta \bigg(1 + \frac{(x - x^\prime)^2}{2 \alpha \ell^2} \bigg)^{-\alph
                               (mult-funcs (first l) (cov-compo (rest l)))
                           ))))
                           
-[ASSUME K (composition  s)]
+ASSUME K (composition  s)
 
-[ASSUME (list f-compute f-emu) (gpmem f-restr K )]
+ASSUME (list f-compute f-emu) (gpmem f-restr K )
 
-for i=1 to n:
-  [PREDICT (f-compute x[i])] ;; observing with a look-up function
+PREDICT (mapv f-compute (get-data-xs)) ;; probe all data points
 
 ;;; PERFORMING INFERENCE  
-[INFER  (repeat 2000 (DO 
+INFER  (repeat 2000 (do
                         (mh 'number-kernel one 1) 
                         (mh 'choice-subset one 1) 
                         (mh 'composit one 1) 
-                        (mh 'hyper one 10)) ]
-
-
+                        (mh 'hyper one 10)))
 \end{lstlisting}
 
 \end{minipage}
@@ -342,8 +339,8 @@ Posterior samples for curves for the airline dataset where SE $\times$ LIN $+$ P
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[frame=single,label=alg:structureVent,caption=Venture Code for Bayesian Optimization,mathescape]
-ASSUME sf1 (tag 'hyper 0 (log (uniform-continuous 0 10)))
-ASSUME l1 (tag 'hyper 1 (log (uniform-continuous 0 10)))
+ASSUME sf1 (tag 'hyper (log (uniform-continuous 0 10)))
+ASSUME l1 (tag 'hyper (log (uniform-continuous 0 10)))
 ASSUME se (make-se sf1 l1)
 ASSUME blackbox-f (get-bayesopt-blackbox)
 ASSUME compute-and-emu (gpmem blackbox-f se)
@@ -371,7 +368,7 @@ INFER
                 ,(mc-argmax emulator-point-sample '-)))
                 
       ;; Hyperparameter inference
-      (mh 'hyper one 50)
+      (mh 'hyper one 50)))
 \end{lstlisting}
 \end{minipage}
       
