with -> \text{with}

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -230,7 +230,7 @@ INFER (repeat 100 (do
 \end{minipage}
 Observed data is generated with the following model: 
 \begin{equation*}
-f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; with\;\;\eta \sim \mathcal{N}(0,\sigma)
+f(x) =  0.3 + 0.4 x + 0.5 \sin(2.7x) + \frac{1.1}{(1+ x^2)} + \eta \;\;\; \text{with}\;\;\eta \sim \mathcal{N}(0,\sigma)
 \end{equation*} where $\sigma = 0.1$ with probability $0.95$, $\sigma = 1$ otherwise.
 \begin{center}
 \includegraphics[width=6cm]{neal_se_1final.png}
