proc should be a keyword

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -54,7 +54,7 @@
     keywordstyle=[2]\color{RawSienna},
     keywords=[2]{assume,predict,infer,observe,DEFINE},
     keywordstyle=[3]\color{black},
-    keywords=[3]{then,else,tag,gamma,uniform_continuous,log,make_squaredexp,make_whitenoise,gpmem,mapv,first,repeat,do,mh,one,add_funcs,make_se,lambda,emulator,lookup,argmax_of_array,linspace,run,array,pass,mc_argmax,uniform_structure,subset,lte,if,flip,mult_funcs,for,to,get_neal_blackbox,get_neal_data_xs,get_data_xs,size,get_bayesopt_blackbox},
+    keywords=[3]{then,else,proc,tag,gamma,uniform_continuous,log,make_squaredexp,make_whitenoise,gpmem,mapv,first,repeat,do,mh,one,add_funcs,make_se,lambda,emulator,lookup,argmax_of_array,linspace,run,array,pass,mc_argmax,uniform_structure,subset,lte,if,flip,mult_funcs,for,to,get_neal_blackbox,get_neal_data_xs,get_data_xs,size,get_bayesopt_blackbox},
     basicstyle=\LSTfont,
     literate=%
     {0}{{{\color{DarkBlue}0}}}1
