--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -204,7 +204,7 @@ Statistical emulation of $f_\restr(x) = \begin{cases}
 \vspace{1cm}
 \begin{minipage}{\linewidth}
 \belowcaptionskip=-10pt
-\begin{lstlisting}[frame=single,mathescape,label=alg:gphierarch]
+\begin{lstlisting}[frame=single,mathescape,label=alg:gphierarch,basicstyle=\fontsize{20}{22}\selectfont\ttfamily]
 /// SETTING UP THE MODEL
 assume alpha_sf = tag('hyperhyper, gamma(7, 1))
 assume beta_sf = tag('hyperhyper, gamma(7, 1))
@@ -355,7 +355,7 @@ Posterior samples for curves for the airline dataset where SE $\times$ LIN $+$ P
 \vspace{1cm}
 
 \begin{minipage}{\linewidth}
-\begin{lstlisting}[frame=single,label=alg:structureVent,mathescape]
+\begin{lstlisting}[frame=single,label=alg:structureVent,mathescape,basicstyle=\fontsize{19}{21}\selectfont\ttfamily]
 assume sf = tag('hyper, log(uniform_continuous(0, 10)))
 assume l = tag('hyper, log(uniform_continuous(0, 10)))
 assume se = make_squaredexp(sf, l)
@@ -363,30 +363,30 @@ assume blackbox_f = get_bayesopt_blackbox()
 assume compute_and_emu = gpmem(blackbox_f, se)
 
 define get_uniform_candidate = proc(prev_xs) {
-    uniform_continuous(-20, 20)
+  uniform_continuous(-20, 20)
 }
 
 define mc_argmax = proc(f, prev_xs) {
-    // Monte Carlo estimator for the argmax of f.
-    run(do(
-        candidate_xs <- mapv(proc(i) { get_uniform_candidate(prev_xs) },
-                             linspace(0, 19, 20)),
-        candidate_ys <- mapv(f, candidate_xs),
-        lookup(candidate_xs, argmax_of_array(candidate_ys))))
+  // Monte Carlo estimator for the argmax of f.
+  run(do(
+    candidate_xs <- mapv(proc(i) {get_uniform_candidate(prev_xs)},
+                         linspace(0, 19, 20)),
+    candidate_ys <- mapv(f, candidate_xs),
+    lookup(candidate_xs, argmax_of_array(candidate_ys))))
 }
 
 define emulator_point_sample = proc(x) {
-    run(sample(lookup(
-        second(compute_and_emu)(array(x)),
-        0)))
+  run(sample(lookup(
+    second(compute_and_emu)(array(x)),
+    0)))
 }
 
 infer repeat(15, do(pass,
-      // Phase 2: Call f_compute on the next probe point
-      predict first(compute_and_emu)(
-                  mc_argmax(emulator_point_sample, '_)),
-      // Phase 1: Hyperparameter inference
-      mh('hyper, one, 50)))
+     // Phase 2: Call f_compute on the next probe point
+     predict first(compute_and_emu)(
+                 mc_argmax(emulator_point_sample, '_)),
+     // Phase 1: Hyperparameter inference
+     mh('hyper, one, 50)))
 \end{lstlisting}
 \end{minipage}
       
