less tickmarks, removed last caption

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -239,9 +239,9 @@ infer repeat(100, do(
 Ran the above program on data with outliers: noise $\sigma = 1.0$ with probability $0.05$, noise $\sigma = 0.1$ otherwise.
 \begin{center}
 \begin{tabular}{ccc}
-  \includegraphics[width=8cm]{neal_se_1final.png}&
-  \includegraphics[width=8cm]{neal_se_2final.png}&
-  \includegraphics[width=8cm]{neal_se_3final.png}\\
+  \includegraphics[width=8cm]{neal_se_1poster.png}&
+  \includegraphics[width=8cm]{neal_se_2poster.png}&
+  \includegraphics[width=8cm]{neal_se_3poster.png}\\
   Data unobserved &
   Data observed &
   Hyperparameters inferred
