syntax highlighting for define

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -52,7 +52,7 @@
     keywordstyle=\color{black},
     commentstyle=\color{mygreen},
     keywordstyle=[2]\color{RawSienna},
-    keywords=[2]{assume,predict,infer,observe,DEFINE},
+    keywords=[2]{assume,predict,infer,observe,define},
     keywordstyle=[3]\color{black},
     keywords=[3]{then,else,proc,tag,gamma,uniform_continuous,log,make_squaredexp,make_whitenoise,gpmem,mapv,first,repeat,do,mh,one,add_funcs,make_se,lambda,lookup,argmax_of_array,linspace,run,array,pass,mc_argmax,uniform_structure,subset,lte,if,flip,mult_funcs,for,to,get_neal_blackbox,get_neal_data_xs,get_data_xs,size,get_bayesopt_blackbox},
     basicstyle=\LSTfont,
