fix coloring of numbers inside comments

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -57,7 +57,7 @@
     keywords=[3]{then,else,proc,tag,gamma,uniform_continuous,log,make_squaredexp,make_whitenoise,gpmem,mapv,first,repeat,do,mh,one,add_funcs,make_se,lambda,lookup,argmax_of_array,linspace,run,array,pass,mc_argmax,uniform_structure,subset,lte,if,flip,mult_funcs,for,to,get_neal_blackbox,get_neal_data_xs,get_data_xs,size,get_bayesopt_blackbox},
     basicstyle=\LSTfont,
     literate=%
-    {0}{{{\color{DarkBlue}0}}}1
+    *{0}{{{\color{DarkBlue}0}}}1
     {1}{{{\color{DarkBlue}1}}}1
     {2}{{{\color{DarkBlue}2}}}1
     {3}{{{\color{DarkBlue}3}}}1
