--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -224,10 +224,10 @@ assume composite_covariance = add_funcs(se, wn)
 /// PERFORMING INFERENCE
 // Create a prober and emulator using gpmem
 assume f_restr = get_neal_blackbox()
-assume compute_and_emu = gpmem(f_restr, composite_covariance)
+assume (f_compute, f_emu) = gpmem(f_restr, composite_covariance)
 
 // Probe all data points
-predict mapv(first(compute_and_emu), get_neal_data_xs())
+predict mapv(f_compute, get_neal_data_xs())
 
 // Infer hypers and hyperhypers
 infer repeat(100, do(
@@ -361,30 +361,30 @@ assume sf = tag('hyper, log(uniform_continuous(0, 10)))
 assume l = tag('hyper, log(uniform_continuous(0, 10)))
 assume se = make_squaredexp(sf, l)
 assume blackbox_f = get_bayesopt_blackbox()
-assume compute_and_emu = gpmem(blackbox_f, se)
+assume (f_compute, f_emu) = gpmem(blackbox_f, se)
 
 define get_uniform_candidate = proc(prev_xs) {
   uniform_continuous(-20, 20)
 }
 
-define mc_argmax = proc(f, prev_xs) {
-  // Monte Carlo estimator for the argmax of f.
+define mc_argmax = proc(func, prev_xs) {
+  // Monte Carlo estimator for the argmax of func.
   run(do(
     candidate_xs <- mapv(proc(i) {get_uniform_candidate(prev_xs)},
                          linspace(0, 19, 20)),
-    candidate_ys <- mapv(f, candidate_xs),
+    candidate_ys <- mapv(func, candidate_xs),
     lookup(candidate_xs, argmax_of_array(candidate_ys))))
 }
 
 define emulator_point_sample = proc(x) {
   run(sample(lookup(
-    second(compute_and_emu)(array(x)),
+    f_emu(array(x)),
     0)))
 }
 
 infer repeat(15, do(pass,
      // Phase 2: Call f_compute on the next probe point
-     predict first(compute_and_emu)(
+     predict f_compute(
                  mc_argmax(emulator_point_sample, '_)),
      // Phase 1: Hyperparameter inference
      mh('hyper, one, 50)))
