--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -217,8 +217,8 @@ assume log_l = tag('hyper, log(gamma(alpha_l, beta_l))))
 assume log_sigma = tag('hyper, log(uniform_continuous(0, 2)))
 
 // The covariance function
-assume se = make_squaredexp(sf, l)
-assume wn = make_whitenoise(sigma)
+assume se = make_squaredexp(log_sf, log_l)
+assume wn = make_whitenoise(log_sigma)
 assume composite_covariance = add_funcs(se, wn)
 
 /// PERFORMING INFERENCE
@@ -357,9 +357,9 @@ Posterior samples for curves for the airline dataset where SE $\times$ LIN $+$ P
 
 \begin{minipage}{\linewidth}
 \begin{lstlisting}[frame=single,label=alg:structureVent,mathescape,basicstyle=\fontsize{19}{21}\selectfont\ttfamily]
-assume sf = tag('hyper, log(uniform_continuous(0, 10)))
-assume l = tag('hyper, log(uniform_continuous(0, 10)))
-assume se = make_squaredexp(sf, l)
+assume log_sf = tag('hyper, log(uniform_continuous(0, 10)))
+assume log_l = tag('hyper, log(uniform_continuous(0, 10)))
+assume se = make_squaredexp(log_sf, log_l)
 assume blackbox_f = get_bayesopt_blackbox()
 assume (f_compute, f_emu) = gpmem(blackbox_f, se)
 
