--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -335,9 +335,8 @@ Posterior samples for curves for the airline dataset where SE $\times$ LIN $+$ P
 \includegraphics[width=\linewidth]{rawx.png}\\
 \includegraphics[width=\linewidth]{priorx.png}\\
 \includegraphics[width=\linewidth]{posteriorx.png}
-\captionof{figure}{\color{DarkSlateGray} Top: raw data, monthly airline passengers. Middle, prior on functions. Bottom, posterior.}
 \end{center}
-
+Top: raw data, monthly airline passengers. Middle, prior on functions. Bottom, posterior
  
 \vfill
 \columnbreak
