--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -268,11 +268,13 @@ Ran the above program on data with outliers: noise $\sigma = 1.0$ with probabili
 \section*{GP Structure Learning}
 
 \subsection*{Base Kernels}
+
  \begin{center} 
 \begin{tabular}{m{11.5cm} m{4cm}}
-$SE = \sigma^2 \exp(-\frac{(x-x^\prime)^2}{2\ell^2})$&\includegraphics[width=4cm]{gpSamples/se.png}\\
-$LIN = \theta (x x^\prime)$&\includegraphics[width=4cm]{gpSamples/lin.png}\\
+\small
+$SE = \sigma^2 \exp(-\frac{(x-x^\prime)^2}{2\ell^2})$&\includegraphics[width=4cm]{gpSamples/se.png} \\
 $PER = \theta \exp \bigg( \frac{2 \sin^2 ( \pi (x - x^\prime)/p}{\ell^2} \bigg)$&\includegraphics[width=4cm]{gpSamples/per.png}\\
+$LIN = \theta (x x^\prime)$                          &\includegraphics[width=4cm]{gpSamples/lin.png}\\
 $RQ =   \theta \bigg(1 + \frac{(x - x^\prime)^2}{2 \alpha \ell^2} \bigg)^{-\alpha}$&\includegraphics[width=4cm]{gpSamples/rq.png}
 \end{tabular}
 \end{center}
@@ -325,22 +327,31 @@ infer  repeat(2000, do(
 
  
  \subsection*{Results}
- 500 samples drawn from the posterior on structure for the CO2 dataset used in the Automated Statistician Project~\cite{duvenaud2013structure}:
- \begin{center}\vspace{1cm}
-%\includegraphics[width=0.7\linewidth]{structureCo2b.png}
-%\captionof{figure}{\color{DarkSlateGray} Composition of covariance function parsed using the example SE $\times$ LIN $+$ PER $\times$ LIN $+$  RQ $\times$ LIN}
-\includegraphics[width=0.7\linewidth]{structureCo2b.png}
-\end{center}\vspace{1cm}
-Posterior samples for curves for the airline dataset where SE $\times$ LIN $+$ PER $\times$ LIN $+$  RQ $\times$ LIN is sampled from the structure grammar:
- \begin{center}\vspace{1cm}
+Airline Dataset used in the Automated Statistician Project~\cite{duvenaud2013structure}:
+\begin{center}
 \includegraphics[width=\linewidth]{rawx.png}\\
 \includegraphics[width=\linewidth]{priorx.png}\\
 \includegraphics[width=\linewidth]{posteriorx.png}
 \end{center}
-Top: raw data, monthly airline passengers. Middle, prior on functions. Bottom, posterior
+\begin{itemize}
+\item Above: top, raw data, monthly airline passengers. Middle, prior on functions. Bottom, posterior
+\item Below: the two most likely structures returned by the program
+\end{itemize}
+
+ \begin{center}
+%\includegraphics[width=0.7\linewidth]{structureCo2b.png}
+%\captionof{figure}{\color{DarkSlateGray} Composition of covariance function parsed using the example SE $\times$ LIN $+$ PER $\times$ LIN $+$  RQ $\times$ LIN}
+
+\end{center}
+\begin{center}
+\includegraphics[width=0.75\linewidth]{airline_struct_1.pdf}
+---------------------------------------------------------------------
+\includegraphics[width=0.7\linewidth]{airline_struct_2.pdf} 
+%airline_struct_1 
+ \end{center}
  
-\vfill
-\columnbreak
+ 
+
 %----------------------------------------------------------------------------------------
 %	Bayesian Optimization
 %----------------------------------------------------------------------------------------
