Bayesian GP -> Bayesian GP Regression

--- a/gpmem_poster.tex
+++ b/gpmem_poster.tex
@@ -190,7 +190,7 @@ p\pn{f(\xbf) = \ybf \mvert \xbf} = \int p\pn{f(\xbf) = \ybf \mvert f, \xbf}\, p(
 %----------------------------------------------------------------------------------------
 %	Bayesian GP
 %----------------------------------------------------------------------------------------
-\section*{Bayesian GP}
+\section*{Bayesian GP Regression}
 
 We show how we can use  {\tt gpmem} to reproduce Neal's Hierarchical Bayesian GP regression~\cite{neal1997monte} for data with outliers.
 
